<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ /** Copyright (c) 2022 船山科技 chuanshantech.com
  ~ OkStack is licensed under Mulan PubL v2.
  ~ You can use this software according to the terms and conditions of the Mulan
  ~ PubL v2. You may obtain a copy of Mulan PubL v2 at:
  ~          http://license.coscl.org.cn/MulanPubL-2.0
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  ~ EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
  ~ MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  ~ See the Mulan PubL v2 for more details.
  ~ */
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.okstar.platform</groupId>
    <artifactId>OkCloud-API-Client</artifactId>
    <version>1.1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jersey.version>3.1.5</jersey.version>
        <xml.version>4.0.1</xml.version>
        <slf4j.version>1.7.36</slf4j.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>${xml.version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>${xml.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.joy1024</groupId>
            <artifactId>common-base</artifactId>
            <version>1.2</version>
        </dependency>

    </dependencies>

    <distributionManagement>
        <repository>
            <id>okstar-nexus-releases</id>
            <url>https://nexus.okstar.org.cn/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>okstar-nexus-snapshots</id>
            <url>https://nexus.okstar.org.cn/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>